# dbt-DQ-checks

./: pyproject.toml
.github/workflows/: CI.yml
dq_checks/: dbt_project.yml  packages.yml  profiles.yml
dq_checks/macros/dq_rules/: assert_acctbal.sql
dq_checks/models/dq/: validation.yml
